--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --poll src/app.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/app.js"
+    "start:local": "npm run build && node dist/app.js",
+    "start": "npm run build && pm2 start dist/app.js"
   },
   "keywords": [
     "reports"
