--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --poll src/app.ts",
     "build": "rimraf ./dist && tsc",
     "start:local": "npm run build && node dist/app.js",
-    "start": "npm run build && pm2 start dist/app.js"
+    "start": "npm run build && pm2 start dist/app.js --watch"
   },
   "keywords": [
     "reports"
